--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.11",
     "@mui/material": "^5.14.10",
+    "@mui/styles": "^5.14.11",
+    "@mui/x-data-grid": "^6.16.0",
     "axios": "^1.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
